--- a/frontend/src/component/Cart/Cart/cart.css
+++ b/frontend/src/component/Cart/Cart/cart.css
@@ -2,7 +2,7 @@
     margin: auto;
     text-align: center;
     padding: 10vmax;
-    height: 50vh;
+    min-height: 60vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
