--- a/frontend/src/component/Product/productDetails.css
+++ b/frontend/src/component/Product/productDetails.css
@@ -76,9 +76,8 @@
   background-color: rgba(0, 0, 0, 0.767);
 }
 
-.detailsBlock-3-1-1 > span {
+.detailsBlock-3-1-1 > input {
   border: none;
-  padding: 0.5vmax;
   width: 1vmax;
   text-align: center;
   outline: none;
